add more description to managemnt submodel

--- a/caseStudyWP/09-appendixsamSim.Rmd
+++ b/caseStudyWP/09-appendixsamSim.Rmd
@@ -256,10 +256,10 @@ The recruitment forecast and true recruitment are then aggregated at the managem
 The next step is to calculate the allowable catch following a harvest control rule. Both study cases in this report  use the `fixedER` option for the harvest control rule. In this option, the user defines fixed exploitation rates for Canada an the USA. Random variability following the beta distribution is applied to the Canadian exploitation rates in two ways: an annual deviation in overall ER and a CU-specific deviation from that annual overall exploitation rate can vary or be constant over time
 
 \begin{align}
-  CanTAC_{y,k} &= CanER_{y,k} \cdot RYMU_{y,MU}\\ 
-  USATAC_{y,k} &= USAER_{y,k} \cdot RYMU_{y,MU}
+  TAC_{y,k,i} &= ER_{y,k,i} \cdot RYMU_{y,MU}
   (\#eq:tac)
 \end{align}
+
 
 
 
@@ -272,13 +272,12 @@ The next step is to calculate the allowable catch following a harvest control ru
 \end{align}
 
 
-
 \begin{align}
    CanERSMU_{y,k} &\sim beta(shape_a,shape_b)\\ 
    shape_a &= fixcanER^2 \cdot(\frac{1-fixcanER}{\sigma_{canERSMU}^{2}}-\frac{1}{fixcanER})\\
    shape_b &= shape_a \cdot \frac{1}{fixcanER-1}\\
    \sigma_{canERSMU} &= CVERSMU \cdot fixcanER
-  (\#eq:CanER)
+  (\#eq:CanERSMU)
 \end{align}
 
 Finally, the CU specific TACs are calculated by multiplying the SMU  
@@ -290,27 +289,38 @@ Finally, the CU specific TACs are calculated by multiplying the SMU
   (\#eq:tac)
 \end{align}
 
+<!--
+need to describe everything above into amTAC, Can mixTAC and cansingtac
+-->
 
-CanTAC_{y,k}
-
-canEROU
-          
-cuERnormDevs
-
-The allowable catch is then calculated from  and this exploitation rate is applied to all projection years with the addition of random error following a beta distribution.
+Once the allowable catches are defined, the realized catches are computed. Catch  uncertainty is often easier to parameterize using observed deviations in target and realized exploitation rates rather than catches. Therefore, the target total allowable catches are back-converted to exploitation rates and realized catches are generated using  beta distributed error around the exploitation rates. 
 
 \begin{align}
-  CANER_{y,k} &= \sum^{k \in MU} $RY_{y,k}\\
-  FctRYMU_{y,k} &= \sum^{k \in MU} FctRY_{y,k}
-  (\#eq:MUagg)
+  Catch_{y,k} &= tempER * RY_{y,k} \\
+  tempER &\sim Beta(location_{k},shape_{k})\\
+  location_{k} &=  {TAC_{y,k}}^2 \cdot (\frac{1 - mu}{\sigma_TAC^2} - \frac{1}{TAC_{y,k}})\\
+  shape_{k} &= location_{k} \cdot \frac{1}{TAC_{y,k} - 1}
+  (\#eq:realcatch)
 \end{align}
 
+The final step of this phase is to compute the Spawners and the exploitation rate Equations \@ref(eq:spawners)
 
+\begin{align}
+  S_{y,k} &= RY_{y,k} \cdot(1-ER_{y,k}) \\
+  ER_{y,k} &= \frac{\sum^i TAC_{y,k,i}}{RY_{y,k}}
+  (\#eq:spawners)
+\end{align}
 
-#### Second Observation submodel
+#### Second Observation submodel -ci=urrent year
+Generate MU-specific observation error
+calculae obs S
+calcObsCatch
+ obsRecRY
+ obsExpRate
+
 #### Assessment submodel
 #### Population Dynamics submodel again
-loop 3 starts at line 1232
+
 
 Generic recovery simulator loop 3
 
