--- a/caseStudyWP/09-appendixsamSim.Rmd
+++ b/caseStudyWP/09-appendixsamSim.Rmd
@@ -40,9 +40,7 @@ $FctRYMU_{y,k}$ & Calendar year recruitment forecast aggregated by management un
 
 
 \begin{table}[ht]
-<!--
-\caption{List of samSim model parameters and values used for the Interior Fraser study case.}
---> 
+\caption{List of samSim model parameters and values used for the Interior Fraser study case. }
 \begin{tabular}{l p{4cm} p{3cm} l}
 \hline
 Notation & definition & data input name & value \\ 
@@ -290,7 +288,7 @@ Finally, the CU specific TACs are calculated by multiplying the SMU
 \end{align}
 
 <!--
-need to describe everything above into amTAC, Can mixTAC and cansingtac
+need to describe everything above into amTAC, Can mixTAC and cansingtac, need to figure out the dimensions of the catch
 -->
 
 Once the allowable catches are defined, the realized catches are computed. Catch  uncertainty is often easier to parameterize using observed deviations in target and realized exploitation rates rather than catches. Therefore, the target total allowable catches are back-converted to exploitation rates and realized catches are generated using  beta distributed error around the exploitation rates. 
@@ -311,14 +309,29 @@ The final step of this phase is to compute the Spawners and the exploitation rat
   (\#eq:spawners)
 \end{align}
 
-#### Second Observation submodel -ci=urrent year
-Generate MU-specific observation error
-calculae obs S
-calcObsCatch
- obsRecRY
- obsExpRate
+#### Second Observation submodel -current year
+
+In this step, observation error is added to the quantities calcualted in the current time step. Catch observation error is given by a log normal distribution truncated between the 0.0001, 0.9999 quantiles. If the catch is taken in a mixed stock fishery, an additional multivariate logistic error is incorporated to
+account for uncertainty in the stock assignment process.
+
+
+\begin{align}
+  obsC_{y,k,i} &= C_{y,k,i} \cdot o_{y,k,i}\\
+  o_{y,k,i} \sim logN(0,\sigma_{C},0.0001,0.9999)
+  (\#eq:obsC)
+\end{align}
+
+Observed recruitment is set to the sum of observed spawners and catches
+\begin{align}
+  obsRY_{y,k} &= \sum^{i}C_{y,k,i} + obsS_{y,k,i}\\
+  obsER_{y,k} &= \frac{\sum^{i}C_{y,k,i}}{obsRY_{y,k}}\\
+  (\#eq:obsR)
+\end{align}
+
 
 #### Assessment submodel
+
+
 #### Population Dynamics submodel again
 
 
